--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
     <title>Portfolio One MCodes</title>
 </head>
 <body>
+    <header>
+        <h1>Tarndeep Virdi</h1>
+        <h2>Software Engineer Student at Manchester Codes</h2>
+    </header>
+    <main>
+        <br>
+        <hr>
+        <section id="about-me">
+        <h3>About Me</h3>
+    
+        <p>A Microbiologist with a background in life sciences and experience working for a major confectionary company in R&D. Now looking for a career change.</p>
+        <p>After spending many years modding games and old consoles, I became interested in learning how these programs and mod files were made. This led me to independently developed (indie) games and sparked my interest in coding. I began my learning journey with FreeCodeCamp and the Odin Project before deciding coding was something I was genuinely interested in and enjoyed the creativity (as well as the challenges!) to pursue a career in.</p>
+    </main>
+   <footer>
+    <p>
+        2022
+    </p>
+    <p>tsv-stacks</p>
+   </footer>
+   
+</section>
     
 </body>
 </html>
