--- a/index.html
+++ b/index.html
@@ -19,6 +19,22 @@
     
         <p>A Microbiologist with a background in life sciences and experience working for a major confectionary company in R&D. Now looking for a career change.</p>
         <p>After spending many years modding games and old consoles, I became interested in learning how these programs and mod files were made. This led me to independently developed (indie) games and sparked my interest in coding. I began my learning journey with FreeCodeCamp and the Odin Project before deciding coding was something I was genuinely interested in and enjoyed the creativity (as well as the challenges!) to pursue a career in.</p>
+        <h3>Qualities</h3>
+            <ol>
+                <li>Reliability</li>
+                <li>Problem-solving skills</li>
+                <li>Teamwork</li>
+                <li>Communication skills</li>
+                <li>illing to learn and ask questions</li>
+            </ol>
+        <h3>Hobbies & interests</h3>
+            <ul>
+                <li>Indie Gaming (Factorio, Stardew Valley, Slay the Spire)</li>
+                <li>The Simpsons</li>
+                <li>AEW / NJPW</li>
+                <li>The Office, Community, The Witcher, </li>
+                <li>Anything Marvel related</li>
+            </ul>
     </main>
    <footer>
     <p>
