--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li>Problem-solving skills</li>
                 <li>Teamwork</li>
                 <li>Communication skills</li>
-                <li>illing to learn and ask questions</li>
+                <li>Willing to learn and ask questions</li>
             </ol>
         <h3>Hobbies & interests</h3>
             <ul>
