added new pages

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <header>
+        <nav>
+            <a href="/pages/projects.html">Projects</a>
+            <a href="/pages/contact.html">Contact Me</a>
+        </nav>
+
         <h1>Tarndeep Virdi</h1>
         <h2>Software Engineer Student at Manchester Codes</h2>
     </header>
