fixed link paths

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <header>
         <nav>
-            <a href="/pages/projects.html">Projects</a>
-            <a href="/pages/contact.html">Contact Me</a>
+            <a href="./pages/projects.html">Projects</a>
+            <a href="./pages/contact.html">Contact Me</a>
         </nav>
 
         <h1>Tarndeep Virdi</h1>
@@ -26,11 +26,11 @@
         <p>A Microbiologist with a background in life sciences and experience working for a major confectionary company in R&D. Coding has reignited my joy for learning and now I hope to have a career change. </p>
 
         <figure>
-            <img src="/images/joao-ferrao-pxnDAT77rVg-unsplash.jpg" alt="Controller and tv for gaming">
+            <img src="./images/joao-ferrao-pxnDAT77rVg-unsplash.jpg" alt="Controller and tv for gaming">
             <figcaption> Take me back to simpler times.</figcaption>
         </figure>
         <figure>
-            <img src="/images/victor-freitas-vqDAUejnwKw-unsplash (2).jpg" alt="man in gym in the deadlift postion lifting weights">
+            <img src="./images/victor-freitas-vqDAUejnwKw-unsplash (2).jpg" alt="man in gym in the deadlift postion lifting weights">
             <figcaption>If I'm not at work or furiously hunched over my desk learning to code I can be found at the gym.</figcaption>
         </figure>
 
