--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav>
-            <a href="./pages/projects.html">Projects</a>
+            <a href="/pages/projects.html">Projects</a>
             <a href="./pages/contact.html">Contact Me</a>
         </nav>
 
