added color palette

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div>
           <p>Tarndeep Virdi</p>
         </div>
-        <div>
+        <div class="links">
           <a href="#">Home</a>
           <a href="#">About Me</a>
           <a href="/pages/projects.html">My Projects</a>
