added more stylings and replaced fonts

--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Trade+Winds&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Archivo+Narrow:ital,wght@0,400;0,700;1,400;1,600;1,700&family=Julius+Sans+One&family=Source+Sans+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="stylesheet"
     />
     <title>Portfolio One MCodes</title>
@@ -22,7 +21,7 @@
         </div>
         <div class="links">
           <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="#homepage">Home</a></li>
             <li><a href="#">About Me</a></li>
             <li><a href="/pages/projects.html">My Projects</a></li>
             <li><a href="/pages/contact.html">Contact Me</a></li>
@@ -49,8 +48,10 @@
       </nav>
     </header>
     <main>
-      <h1>Tarndeep Virdi</h1>
-      <h2>Software Engineer Student at Manchester Codes</h2>
+      <section id="homepage">
+        <h1>Tarndeep Virdi</h1>
+        <h2>Software Engineer Student at Manchester Codes</h2>
+      </section>
 
       <h3>About Me</h3>
 
