--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="links">
           <ul>
             <li><a href="#homepage">Home</a></li>
-            <li><a href="#">About Me</a></li>
+            <li><a href="#about-me">About Me</a></li>
             <li><a href="/pages/projects.html">My Projects</a></li>
             <li><a href="/pages/contact.html">Contact Me</a></li>
           </ul>
@@ -52,50 +52,44 @@
         <h1>Tarndeep Virdi</h1>
         <h2>Software Engineer Student at Manchester Codes</h2>
       </section>
+      <section id="about-me">
+        <h3>About Me</h3>
 
-      <h3>About Me</h3>
+        <p>
+          A Microbiologist with a background in life sciences and experience
+          working for a major confectionary company in R&D. Coding has reignited
+          my joy for learning and now I hope to have a career change.
+        </p>
 
-      <p>
-        A Microbiologist with a background in life sciences and experience
-        working for a major confectionary company in R&D. Coding has reignited
-        my joy for learning and now I hope to have a career change.
-      </p>
+        <figure>
+          <img
+            src="/images/joao-ferrao-pxnDAT77rVg-unsplash.jpg"
+            alt="Controller and tv for gaming"
+          />
+          <figcaption>Take me back to simpler times.</figcaption>
+        </figure>
+        <figure>
+          <img
+            src="/images/victor-freitas-vqDAUejnwKw-unsplash (2).jpg"
+            alt="man in gym in the deadlift postion lifting weights"
+          />
+          <figcaption>
+            If I'm not at work or furiously hunched over my desk learning to
+            code I can be found at the gym.
+          </figcaption>
+        </figure>
 
-      <figure>
-        <img
-          src="/images/joao-ferrao-pxnDAT77rVg-unsplash.jpg"
-          alt="Controller and tv for gaming"
-        />
-        <figcaption>Take me back to simpler times.</figcaption>
-      </figure>
-      <figure>
-        <img
-          src="/images/victor-freitas-vqDAUejnwKw-unsplash (2).jpg"
-          alt="man in gym in the deadlift postion lifting weights"
-        />
-        <figcaption>
-          If I'm not at work or furiously hunched over my desk learning to code
-          I can be found at the gym.
-        </figcaption>
-      </figure>
+        <p>
+          After spending many years modding games and old consoles, I became
+          interested in learning how these programs and mod files were made.
+          This led me to independently developed (indie) games and sparked my
+          interest in coding. I began my learning journey with FreeCodeCamp and
+          the Odin Project before deciding coding was something I was genuinely
+          interested in and enjoyed the creativity (as well as the challenges!)
+          to pursue a career in.
+        </p>
+      </section>
 
-      <p>
-        After spending many years modding games and old consoles, I became
-        interested in learning how these programs and mod files were made. This
-        led me to independently developed (indie) games and sparked my interest
-        in coding. I began my learning journey with FreeCodeCamp and the Odin
-        Project before deciding coding was something I was genuinely interested
-        in and enjoyed the creativity (as well as the challenges!) to pursue a
-        career in.
-      </p>
-      <h3>Qualities</h3>
-      <ol>
-        <li>Reliability</li>
-        <li>Problem-solving skills</li>
-        <li>Teamwork</li>
-        <li>Communication skills</li>
-        <li>Willing to learn and ask questions</li>
-      </ol>
       <h3>Hobbies & interests</h3>
       <ul>
         <li>Indie Gaming (Factorio, Stardew Valley, Slay the Spire)</li>
@@ -104,6 +98,9 @@
         <li>The Office, Community, The Witcher,</li>
         <li>Anything Marvel related</li>
       </ul>
+
+      <section class="projects"></section>
+      <section class="contact-me"></section>
     </main>
     <footer>
       <p>2022</p>
