added animation to navbar

--- a/index.html
+++ b/index.html
@@ -99,8 +99,12 @@
         <li>Anything Marvel related</li>
       </ul>
 
-      <section class="projects"></section>
-      <section class="contact-me"></section>
+      <section class="projects">
+        <h3>My Projects</h3>
+      </section>
+      <section class="contact-me">
+        <h3>Contact Me</h3>
+      </section>
     </main>
     <footer>
       <p>2022</p>
