--- a/index.html
+++ b/index.html
@@ -84,14 +84,14 @@
 
         <figure>
           <img
-            src="/images/joao-ferrao-pxnDAT77rVg-unsplash.jpg"
+            src="./images/joao-ferrao-pxnDAT77rVg-unsplash.jpg"
             alt="Controller and tv for gaming"
           />
           <figcaption>Take me back to simpler times.</figcaption>
         </figure>
         <figure>
           <img
-            src="/images/victor-freitas-vqDAUejnwKw-unsplash (2).jpg"
+            src="./images/victor-freitas-vqDAUejnwKw-unsplash (2).jpg"
             alt="man in gym in the deadlift postion lifting weights"
           />
           <figcaption>
