added outline and sections

--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@
       <section id="about-me">
         <h3>About Me</h3>
 
+        <p>Background and Education</p>
+        <p>Coding and learning journey</p>
+        <p>Hobbies and interests</p>
+        <p>Career goals</p>
+
         <p>
           A Microbiologist with a background in life sciences and experience
           working for a major confectionary company in R&D. Coding has reignited
@@ -119,7 +124,9 @@
         <li>The Office, Community, The Witcher,</li>
         <li>Anything Marvel related</li>
       </ul>
-
+      <section class="skills">
+        <h3>Skills</h3>
+      </section>
       <section class="projects">
         <h3>My Projects</h3>
       </section>
