added sticky to navbar

--- a/index.html
+++ b/index.html
@@ -35,8 +35,13 @@
     <meta name="theme-color" content="#ffffff" />
   </head>
   <body>
+    <section id="homepage">
+      <h1>Tarndeep Virdi</h1>
+      <h2>Software Engineer Student at Manchester Codes</h2>
+    </section>
+
     <header>
-      <nav>
+      <nav id="navbar">
         <div>
           <p>Tarndeep Virdi</p>
         </div>
@@ -69,10 +74,6 @@
       </nav>
     </header>
     <main>
-      <section id="homepage">
-        <h1>Tarndeep Virdi</h1>
-        <h2>Software Engineer Student at Manchester Codes</h2>
-      </section>
       <section id="about-me">
         <h3>About Me</h3>
 
