--- a/index.html
+++ b/index.html
@@ -36,8 +36,12 @@
   </head>
   <body>
     <section id="homepage">
-      <h1>Tarndeep Virdi</h1>
-      <h2>Software Engineer Student at Manchester Codes</h2>
+      <div>
+        <h2>Hi, I'm</h2>
+        <h1>Tarndeep</h1>
+        <h2>A full stack web-developer</h2>
+      </div>
+      <img alt="photo of me sitting at my desk" src="./me-homepage.jpg" />
     </section>
     <nav id="navbar">
       <div>
