added flex to homepage

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
         <h1>Tarndeep</h1>
         <h2>A full stack web-developer</h2>
       </div>
-      <img alt="photo of me sitting at my desk" src="./me-homepage.jpg" />
+      <div>
+        <img alt="photo of me sitting at my desk" src="./me-homepage.jpg" />
+      </div>
     </section>
     <nav id="navbar">
       <div>
