added images and grid to about me

--- a/index.html
+++ b/index.html
@@ -78,7 +78,35 @@
     </nav>
     <main>
       <section id="about-me">
-        <h3>About Me</h3>
+        <h2>About Me</h2>
+
+        <div class="about-table">
+          <div class="container">
+            <img
+              class="image"
+              src="./images/national-cancer-institute-XknuBmnjbKg-unsplash.jpg"
+              alt="man preparing samples into test tubes"
+            />
+          </div>
+          <div>
+            <img
+              src="./images/scott-graham-5fNmWej4tAA-unsplash.jpg"
+              alt="man making notes with laptop"
+            />
+          </div>
+          <div>
+            <img
+              src="./images/joao-ferrao-pxnDAT77rVg-unsplash.jpg"
+              alt="ps3 controller with racing game on tv"
+            />
+          </div>
+          <div>
+            <img
+              src="./images/hunters-race-MYbhN8KaaEc-unsplash.jpg"
+              alt="man in business suit"
+            />
+          </div>
+        </div>
 
         <p>Background and Education</p>
         <p>Coding and learning journey</p>
@@ -90,24 +118,6 @@
           working for a major confectionary company in R&D. Coding has reignited
           my joy for learning and now I hope to have a career change.
         </p>
-
-        <figure>
-          <img
-            src="./images/joao-ferrao-pxnDAT77rVg-unsplash.jpg"
-            alt="Controller and tv for gaming"
-          />
-          <figcaption>Take me back to simpler times.</figcaption>
-        </figure>
-        <figure>
-          <img
-            src="./images/victor-freitas-vqDAUejnwKw-unsplash (2).jpg"
-            alt="man in gym in the deadlift postion lifting weights"
-          />
-          <figcaption>
-            If I'm not at work or furiously hunched over my desk learning to
-            code I can be found at the gym.
-          </figcaption>
-        </figure>
 
         <p>
           After spending many years modding games and old consoles, I became
