added hover on images

--- a/index.html
+++ b/index.html
@@ -87,57 +87,95 @@
               src="./images/national-cancer-institute-XknuBmnjbKg-unsplash.jpg"
               alt="man preparing samples into test tubes"
             />
+            <div class="middle">
+              <div class="text">
+                <p>
+                  A Microbiologist with focus on the shelf-life and spoilage of
+                  food and method validation.
+                </p>
+                <p>
+                  Experience of working within the fast paced and exciting
+                  environment of Research & Development at a major confectionary
+                  and chocolate company where I helped in the development and
+                  launch of many different Cadbury Dairy Milk and Milka
+                  products.
+                </p>
+              </div>
+            </div>
           </div>
-          <div>
+          <div class="container">
             <img
+              class="image"
               src="./images/scott-graham-5fNmWej4tAA-unsplash.jpg"
               alt="man making notes with laptop"
             />
+            <div class="middle">
+              <div class="text">
+                <p>
+                  I began my learning journey with FreeCodeCamp and the Odin
+                  Project before deciding coding was something I was genuinely
+                  interested in and enjoyed the creativity (as well as the
+                  challenges!) to pursue a career in.
+                </p>
+              </div>
+            </div>
           </div>
-          <div>
+          <div class="container">
             <img
+              class="image"
               src="./images/joao-ferrao-pxnDAT77rVg-unsplash.jpg"
               alt="ps3 controller with racing game on tv"
             />
+            <div class="middle">
+              <div class="text">
+                <p>
+                  After spending many years modding games and old consoles, I
+                  became more and more interested in learning how these programs
+                  and modification files were made.
+                </p>
+                <p>
+                  On my learning journey (or rabbit hole) this led me to
+                  independently developed (indie) games and it amazed me how
+                  small groups of people or individuals were able to develop
+                  these games that would keep me occupied for hours. This is
+                  what sparked my interest in coding.
+                </p>
+              </div>
+            </div>
           </div>
-          <div>
+          <div class="container">
             <img
+              class="image"
               src="./images/hunters-race-MYbhN8KaaEc-unsplash.jpg"
               alt="man in business suit"
             />
+            <div class="middle">
+              <div class="text">
+                <p>
+                  I am currently a student at Manchester Codes learning Full
+                  Stack Web Development and ultimately looking to become a
+                  Junior Developer to begin my career change!
+                </p>
+              </div>
+            </div>
           </div>
         </div>
 
         <p>Background and Education</p>
+        <p>
+          A Microbiologist with focus on the shelf-life and spoilage of food. I
+          have experience working within the fast paced and exciting environment
+          of Research & Development at a major confectionary and chocolate
+          company where I helped in the development and launch of many different
+          Cadbury Dairy Milk and Milka products.
+        </p>
         <p>Coding and learning journey</p>
+
         <p>Hobbies and interests</p>
+
         <p>Career goals</p>
-
-        <p>
-          A Microbiologist with a background in life sciences and experience
-          working for a major confectionary company in R&D. Coding has reignited
-          my joy for learning and now I hope to have a career change.
-        </p>
-
-        <p>
-          After spending many years modding games and old consoles, I became
-          interested in learning how these programs and mod files were made.
-          This led me to independently developed (indie) games and sparked my
-          interest in coding. I began my learning journey with FreeCodeCamp and
-          the Odin Project before deciding coding was something I was genuinely
-          interested in and enjoyed the creativity (as well as the challenges!)
-          to pursue a career in.
-        </p>
       </section>
 
-      <h3>Hobbies & interests</h3>
-      <ul>
-        <li>Indie Gaming (Factorio, Stardew Valley, Slay the Spire)</li>
-        <li>The Simpsons</li>
-        <li>AEW / NJPW</li>
-        <li>The Office, Community, The Witcher,</li>
-        <li>Anything Marvel related</li>
-      </ul>
       <section class="skills">
         <h3>Skills</h3>
       </section>
