added icons to about me with hover effect

--- a/index.html
+++ b/index.html
@@ -87,6 +87,23 @@
               src="./images/national-cancer-institute-XknuBmnjbKg-unsplash.jpg"
               alt="man preparing samples into test tubes"
             />
+            <div class="top">
+              <div class="text-header">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="5em"
+                  height="5em"
+                  preserveAspectRatio="xMidYMid meet"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    fill="currentColor"
+                    d="M12 3L1 9l4 2.18v6L12 21l7-3.82v-6l2-1.09V17h2V9L12 3m6.82 6L12 12.72L5.18 9L12 5.28L18.82 9M17 16l-5 2.72L7 16v-3.73L12 15l5-2.73V16Z"
+                  />
+                </svg>
+                <h3>Background <br />& <br />Education</h3>
+              </div>
+            </div>
             <div class="middle">
               <div class="text">
                 <p>
@@ -109,6 +126,21 @@
               src="./images/scott-graham-5fNmWej4tAA-unsplash.jpg"
               alt="man making notes with laptop"
             />
+            <div class="text-header">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="5em"
+                height="5em"
+                preserveAspectRatio="xMidYMid meet"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  fill="currentColor"
+                  d="M1 20q-.425 0-.712-.288Q0 19.425 0 19t.288-.712Q.575 18 1 18h1V5q0-.825.588-1.413Q3.175 3 4 3h16q.825 0 1.413.587Q22 4.175 22 5v13h1q.425 0 .712.288q.288.287.288.712t-.288.712Q23.425 20 23 20Zm9.5-2h3q.2 0 .35-.15q.15-.15.15-.35q0-.2-.15-.35q-.15-.15-.35-.15h-3q-.2 0-.35.15q-.15.15-.15.35q0 .2.15.35q.15.15.35.15ZM4 15h16V5H4Zm0 0V5v10Z"
+                />
+              </svg>
+              <h3>Coding <br />& <br />Learning</h3>
+            </div>
             <div class="middle">
               <div class="text">
                 <p>
@@ -126,6 +158,21 @@
               src="./images/joao-ferrao-pxnDAT77rVg-unsplash.jpg"
               alt="ps3 controller with racing game on tv"
             />
+            <div class="text-header">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="5em"
+                height="5em"
+                preserveAspectRatio="xMidYMid meet"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  fill="currentColor"
+                  d="M4.725 20q-1.575 0-2.6-1.1Q1.1 17.8 1.05 16.325q0-.2.025-.45t.075-.45l2.1-8.4Q3.6 5.7 4.688 4.85Q5.775 4 7.125 4h9.75q1.35 0 2.437.85q1.088.85 1.438 2.175l2.1 8.4q.05.225.088.462q.037.238.037.463q0 1.5-1.062 2.575Q20.85 20 19.275 20q-1.05 0-1.95-.55q-.9-.55-1.35-1.5l-.7-1.45q-.125-.275-.362-.387q-.238-.113-.538-.113h-4.75q-.3 0-.537.113q-.238.112-.363.387l-.7 1.45q-.45.95-1.35 1.5q-.9.55-1.95.55Zm.075-2q.425 0 .813-.225q.387-.225.637-.7l.7-1.425q.375-.775 1.087-1.212Q8.75 14 9.625 14h4.75q.85 0 1.575.45t1.125 1.2l.7 1.425q.25.475.638.7q.387.225.812.225q.65 0 1.175-.45t.55-1.175v-.238q0-.112-.05-.237l-2.1-8.375q-.175-.675-.7-1.1Q17.575 6 16.875 6h-9.75q-.7 0-1.237.425q-.538.425-.688 1.1L3.1 15.9q-.05.15-.05.45q0 .725.55 1.188q.55.462 1.2.462Zm8.7-7q-.425 0-.712-.288q-.288-.287-.288-.712t.288-.713Q13.075 9 13.5 9t.713.287q.287.288.287.713t-.287.712Q13.925 11 13.5 11Zm2-2q-.425 0-.712-.288Q14.5 8.425 14.5 8t.288-.713Q15.075 7 15.5 7t.712.287q.288.288.288.713t-.288.712Q15.925 9 15.5 9Zm0 4q-.425 0-.712-.288q-.288-.287-.288-.712t.288-.713Q15.075 11 15.5 11t.712.287q.288.288.288.713t-.288.712Q15.925 13 15.5 13Zm2-2q-.425 0-.712-.288q-.288-.287-.288-.712t.288-.713Q17.075 9 17.5 9t.712.287q.288.288.288.713t-.288.712Q17.925 11 17.5 11Zm-9 1.5q-.3 0-.525-.225q-.225-.225-.225-.525v-1h-1q-.3 0-.525-.225Q6 10.3 6 10q0-.3.225-.525q.225-.225.525-.225h1v-1q0-.3.225-.525Q8.2 7.5 8.5 7.5q.3 0 .525.225q.225.225.225.525v1h1q.3 0 .525.225Q11 9.7 11 10q0 .3-.225.525q-.225.225-.525.225h-1v1q0 .3-.225.525q-.225.225-.525.225Z"
+                />
+              </svg>
+              <h3>Hobbies <br />& <br />Interests</h3>
+            </div>
             <div class="middle">
               <div class="text">
                 <p>
@@ -149,6 +196,24 @@
               src="./images/hunters-race-MYbhN8KaaEc-unsplash.jpg"
               alt="man in business suit"
             />
+            <div class="text-header">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="5em"
+                height="5em"
+                preserveAspectRatio="xMidYMid meet"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  fill="currentColor"
+                  d="M20 17a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H9.46c.35.61.54 1.3.54 2h10v11h-9v2m4-10v2H9v13H7v-6H5v6H3v-8H1.5V9a2 2 0 0 1 2-2H15M8 4a2 2 0 0 1-2 2a2 2 0 0 1-2-2a2 2 0 0 1 2-2a2 2 0 0 1 2 2Z"
+                />
+              </svg>
+              <h3>
+                Career <br />
+                Goals
+              </h3>
+            </div>
             <div class="middle">
               <div class="text">
                 <p>
@@ -160,14 +225,6 @@
             </div>
           </div>
         </div>
-
-        <p>Background and Education</p>
-
-        <p>Coding and learning journey</p>
-
-        <p>Hobbies and interests</p>
-
-        <p>Career goals</p>
       </section>
 
       <section class="skills">
