--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,22 +15,26 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="./apple-touch-icon.png"
+      href="./favicons/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./favicon-32x32.png"
+      href="./favicons/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="./favicon-16x16.png"
+      href="./favicons/favicon-16x16.png"
     />
-    <link rel="manifest" href="./site.webmanifest" />
-    <link rel="mask-icon" href="./safari-pinned-tab.svg" color="#5bbad5" />
+    <link rel="manifest" href="./favicons/site.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="./favicons/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
   </head>
@@ -42,7 +46,10 @@
         <h2>A full stack web-developer</h2>
       </div>
       <div>
-        <img alt="photo of me sitting at my desk" src="./me-homepage.jpg" />
+        <img
+          alt="photo of me sitting at my desk"
+          src="./images/me-homepage.jpg"
+        />
       </div>
     </section>
     <nav id="navbar">
@@ -53,7 +60,7 @@
         <ul>
           <li><a href="#homepage">Home</a></li>
           <li><a href="#about-me">About Me</a></li>
-          <li><a href="/pages/projects.html">My Projects</a></li>
+          <li><a href="#projects">My Projects</a></li>
           <li><a href="/pages/contact.html">Contact Me</a></li>
         </ul>
         <!-- Light / dark icon -->
@@ -230,7 +237,7 @@
       <section class="skills">
         <h2>Skills</h2>
       </section>
-      <section class="projects">
+      <section id="projects">
         <h3>My Projects</h3>
       </section>
       <section class="contact-me">
@@ -242,6 +249,6 @@
       <p>tsv-stacks</p>
     </footer>
     <script src="https://code.iconify.design/iconify-icon/1.0.1/iconify-icon.min.js"></script>
-    <script defer src="script.js"></script>
+    <script defer src="./script.js"></script>
   </body>
 </html>
