--- a/index.html
+++ b/index.html
@@ -234,12 +234,15 @@
         </div>
       </section>
 
+      <section>
+        <div id="projects"></div>
+        <h2>My Projects</h2>
+      </section>
+
       <section class="skills">
         <h2>Skills</h2>
       </section>
-      <section id="projects">
-        <h3>My Projects</h3>
-      </section>
+
       <section class="contact-me">
         <h3>Contact Me</h3>
       </section>
