set up flickity

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Archivo+Narrow:ital,wght@0,400;0,700;1,400;1,600;1,700&family=Julius+Sans+One&family=Source+Sans+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./flickity-carousel/flickity.min.css" />
     <title>Portfolio One MCodes</title>
     <link
       rel="apple-touch-icon"
@@ -63,7 +64,7 @@
           <li><a href="#projects">My Projects</a></li>
           <li><a href="/pages/contact.html">Contact Me</a></li>
         </ul>
-        <!-- Light / dark icon -->
+
         <button
           aria-label="dark and light mode toggle button"
           class="theme-toggle-button"
@@ -86,7 +87,6 @@
     <main>
       <section id="about-me">
         <h2>About Me</h2>
-        <!-- https://css-tricks.com/scroll-triggered-animation-vanilla-javascript/ -->
         <div class="about-table">
           <div class="container">
             <img
@@ -237,6 +237,21 @@
       <section>
         <div id="projects"></div>
         <h2>My Projects</h2>
+        <div
+          class="main-carousel"
+          data-flickity='{ "cellAlign": "left", "contain": true, "wrapAround": true }'
+        >
+          <div class="carousel-cell"></div>
+          <div class="carousel-cell"></div>
+          <div class="carousel-cell"></div>
+          <div class="carousel-cell"></div>
+          <div class="carousel-cell"></div>
+          <div class="carousel-cell"></div>
+          <div class="carousel-cell"></div>
+          <div class="carousel-cell"></div>
+          <div class="carousel-cell"></div>
+          <div class="carousel-cell"></div>
+        </div>
       </section>
 
       <section class="skills">
@@ -253,5 +268,6 @@
     </footer>
     <script src="https://code.iconify.design/iconify-icon/1.0.1/iconify-icon.min.js"></script>
     <script defer src="./script.js"></script>
+    <script src="./flickity-carousel/flickity.pkgd.min.js"></script>
   </body>
 </html>
