--- a/index.html
+++ b/index.html
@@ -238,13 +238,28 @@
         <div id="projects"></div>
         <h2>My Projects</h2>
         <div
-          class="main-carousel"
-          data-flickity='{ "cellAlign": "left", "contain": true, "wrapAround": true }'
+          class="carousel"
+          data-flickity='{ "cellAlign": "center", "contain": true, "wrapAround": true }'
         >
-          <div class="carousel-cell"></div>
-          <div class="carousel-cell"></div>
-          <div class="carousel-cell"></div>
-          <div class="carousel-cell"></div>
+          <div class="carousel-cell">
+            <h3 class="project-title">Virtual Baby Groot Pet</h3>
+          </div>
+          <div class="carousel-cell">
+            <h3 class="project-title">Game Collection</h3>
+          </div>
+          <div class="carousel-cell">
+            <h3 class="project-title">Sign Up Page</h3>
+            <img
+              src="./images/project-img/sign up page finish.JPG"
+              alt="preview of sign up page"
+            />
+            <p>Built with</p>
+            <div class="project-icons"></div>
+            <p>Sign Up page - details update readme</p>
+          </div>
+          <div class="carousel-cell">
+            <h3 class="project-title"></h3>
+          </div>
           <div class="carousel-cell"></div>
           <div class="carousel-cell"></div>
           <div class="carousel-cell"></div>
@@ -266,8 +281,8 @@
       <p>2022</p>
       <p>tsv-stacks</p>
     </footer>
+    <script src="./flickity-carousel/flickity.pkgd.min.js"></script>
     <script src="https://code.iconify.design/iconify-icon/1.0.1/iconify-icon.min.js"></script>
     <script defer src="./script.js"></script>
-    <script src="./flickity-carousel/flickity.pkgd.min.js"></script>
   </body>
 </html>
