--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
               alt="preview of sign up page"
             />
             <p>Built with</p>
-            <div class="project-icons"></div>
+            <div class="project-icons">/icons: github fork live preview</div>
             <p>Sign Up page - details update readme</p>
           </div>
           <div class="carousel-cell">
