minor text fixes

--- a/index.html
+++ b/index.html
@@ -265,12 +265,13 @@
             </div>
 
             <p class="project-details">
-              A virtual pet based on Baby Groot. Made using Vanilla JS, CSS &
-              HTML. This project allowed me to practice with using TDD with Jest
-              & JS.
+              A virtual pet based on Baby Groot. A tamagotchi inspired game
+              where you must keep Baby Groot alive by managing health and hunger
+              levels.
+
               <br />
-              A tamagotchi inspired game where you must keep Baby Groot alive by
-              managing health and hunger levels.
+              Made using Vanilla JS, CSS & HTML. This project allowed me to
+              practice with using TDD with Jest & JS.
             </p>
             <div class="project-icons">
               <svg
