--- a/index.html
+++ b/index.html
@@ -560,8 +560,9 @@
       </section>
     </main>
     <footer>
+      <p>Made by tsv-stacks</p>
       <p>2022</p>
-      <p>tsv-stacks</p>
+      <p>add gh and repo icons</p>
     </footer>
     <script src="./flickity-carousel/flickity.pkgd.min.js"></script>
     <script src="https://code.iconify.design/iconify-icon/1.0.2/iconify-icon.min.js"></script>
